--- a/index.html
+++ b/index.html
@@ -1626,7 +1626,7 @@
                         </div>
                         <div class="swiper-slide">
                           <img src="images/factory/18.jpg" v-if="lang === 'CN'" />
-                          <img src="images/en-factory/18.jpg" v-else />
+                          <img src="images/en-factory/18.png" v-else />
                         </div>
                         <div class="swiper-slide">
                           <img src="images/factory/19.jpg" v-if="lang === 'CN'" />
@@ -1651,11 +1651,11 @@
                         background-position: right top;
                       "
                     >
-                      <h4 lang="factory_third"></h4>
-                      <h4 lang="factory_fourth"></h4>
+                      <h4 lang="factory_ninth"></h4>
+                      <h4 lang="factory_tenth"></h4>
                       <img class="scale-with-grid" src="images/shopassistant-sep2.png" />
                       <hr class="no_line" style="margin: 0 auto 15px auto" />
-                      <p class="factory-describe" lang="factory_fifth"></p>
+                      <p class="factory-describe" lang="factory_eleventh"></p>
                     </div>
                   </div>
                 </div>
@@ -2029,6 +2029,7 @@
               </figure>
               <span lang="footer_first"></span>
             </div>
+            <div class="col-md-3"></div>
             <div class="col-md-3">
               <h4 lang="footer_second"></h4>
               <ul>
